--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.5.3",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.17",
     "sweetalert2": "^11.21.0",
+    "swiper": "^11.2.8",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
