--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
+    "lucide-react": "^0.541.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-qr-barcode-scanner": "^2.1.8",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.5.3",
