--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.541.0",
     "qr-scanner": "^1.4.2",
     "react": "^19.0.0",
